--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
     <header class="header" role="banner">
         <div class="container">
             <div class="nav-brand">
-                <h1>Action Pest Removal</h1>
+                <h1>Crete Dead Animal Removals</h1>
                 <a href="tel:(708) 348-9144" class="phone" aria-label="Call Action Pest Removal">(708) 348-9144</a>
             </div>
             <nav class="nav" role="navigation" aria-label="Main navigation">
